added new controller to provide google api key
